@@ -1,2 +1,34 @@
-@echo CRITICAL: Everything is not going to be ok! (%1 %2 %3)
-@exit 2
+@echo off
+echo Test arguments are: (%1 %2 %3)
+IF "%1" == "LONG" GOTO :PRINT_LONG
+GOTO :PRINT_SHORT
+
+:PRINT_LONG
+echo 0123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789
+echo 0123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789
+echo 0123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789
+echo 0123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789
+echo 0123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789
+echo 0123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789
+echo 0123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789
+echo 0123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789
+echo 0123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789
+echo 0123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789
+echo 0123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789
+
+:PRINT_SHORT
+
+IF "%1" == "CRIT" GOTO :EXIT_CRIT
+IF "%1" == "WARN" GOTO :EXIT_WARN
+IF "%1" == "UNKNOWN" GOTO :EXIT_UNKNOWN
+
+exit /B 0
+
+:EXIT_WARN
+exit /B 1
+
+:EXIT_CRIT
+exit /B 2
+
+:EXIT_UNKNOWN
+exit /B 3
